--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,42 @@
 /* You can add global styles to this file, and also import other style files */
+body
+{
+    margin: 0;
+    font-size: 15px;
+}
+
+@font-face
+{
+    font-family: 'Geometria';
+    src: url('./fonts/Geometria-Medium.eot');
+    src: local('Geometria Medium'),
+    local('Geometria-Medium'),
+    url('./fonts/Geometria-Medium.woff') format('woff'),
+    url('./fonts/Geometria-Medium.ttf') format('truetype');
+    font-weight: 500;
+    font-style: normal;
+}
+
+@font-face
+{
+    font-family: 'Geometria';
+    src: url('./fonts/Geometria-Regular.eot');
+    src: local('Geometria'),
+    local('Geometria-Regular'),
+    url('./fonts/Geometria-Regular.woff') format('woff'),
+    url('./fonts/Geometria-Regular.ttf') format('truetype');
+    font-weight: 400;
+    font-style: normal;
+}
+
+@font-face
+{
+    font-family: 'Geometria';
+    src: url('./fonts/Geometria-Bold.eot');
+    src: local('Geometria Bold'),
+    local('Geometria-Bold'),
+    url('./fonts/Geometria-Bold.woff') format('woff'),
+    url('./fonts/Geometria-Bold.ttf') format('truetype');
+    font-weight: 700;
+    font-style: normal;
+}
