--- a/src/app/payments/payments-request/payments-request.component.css
+++ b/src/app/payments/payments-request/payments-request.component.css
@@ -26,6 +26,7 @@
     font-weight: 700;
     color: black;
     font-size: 15px;
+    font-family: 'Geometria', Arial, sans-serif;
     width: 400px;
     text-indent: 10px;
     position: relative;
