--- a/src/app/payments/payments-pay/pay-card/pay-card.component.html
+++ b/src/app/payments/payments-pay/pay-card/pay-card.component.html
@@ -1,2 +1,86 @@
 <app-payments-pay-navbar></app-payments-pay-navbar>
-<p>1</p>
+<div class="layout">
+    <form class="form" (ngSubmit)="onSubmit(f)" #f="ngForm">
+        <div class="card__wrapper">
+            <div class="card">
+                <div class="cards-logo">
+                    <img src="../../../../assets/visa.png" height="15" width="43" class="visa-logo">
+                    <img src="../../../../assets/mastercard.png" height="25" width="33"/>
+                    <img src="../../../../assets/maestro.png" height="25" width="33"/>
+                </div>
+                <div class="form__item">
+                    <input class="form__input card-number"
+                           type="text" id="card"
+                           name="card"
+                           placeholder="Номер карты"
+                           ngModel
+                           pattern="^[0-9]{16}$"
+                           maxlength="16"
+                           required>
+                </div>
+                <div class="form__item-wrapper">
+                    <input class="form__input"
+                           type="text" id="date"
+                           name="date"
+                           placeholder="ММ/ГГ"
+                           ngModel
+                           pattern="^[0-9]{2}/[0-9]{2}$"
+                           maxlength="16"
+                           required>
+                    <input class="form__input"
+                           type="text" id="cvc"
+                           name="cvc"
+                           placeholder="CVC"
+                           ngModel
+                           pattern="^[0-9]{3}$"
+                           maxlength="3"
+                           required>
+                </div>
+            </div>
+        </div>
+        <div class="other-block">
+            <div class="form__item">
+                <label for="amount" class="form__label">Сумма</label>
+                <input class="form__input form__input-new"
+                       type="number"
+                       id="amount"
+                       name="amount"
+                       min="1000"
+                       ngModel
+                       placeholder="от 1000 до 75000₽"
+                       max="75000"
+                       required>
+            </div>
+            <div class="form__item">
+                <label for="comment" class="form__label">Комментарий</label>
+                <input class="form__input form__input-new"
+                       type="text"
+                       id="comment"
+                       name="comment"
+                       placeholder="До 150 символов"
+                       ngModel
+                       maxlength="150"
+                       pattern="^.*$"
+                       required>
+            </div>
+            <div class="form__item">
+                <label for="email" class="form__label">Ваша эл.почта</label>
+                <input class="form__input form__input-new"
+                       type="type"
+                       id="email"
+                       name="email"
+                       placeholder="Для квитанции об оплате"
+                       ngModel
+                       pattern="^([A-Za-z0-9_-]+\.)*[A-Za-z0-9_-]+@[A-Za-z0-9_-]+(\.[A-Za-z0-9_-]+)*\.[A-Za-z]{2,6}$"
+                       required>
+            </div>
+            <div class="button__wrapper">
+                <button class="button" type="submit" [disabled]="!f.valid">
+                    <span class="button__text">Заплатить</span>
+                </button>
+                <img src="https://static.tildacdn.com/tild3464-3130-4365-a233-613965613735/BUTTON_1.png"
+                     class="button_img" width="180px" height="60px">
+            </div>
+        </div>
+    </form>
+</div>
