--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,1 @@
-<main class="general-layout">
-    <app-header></app-header>
-    <app-payments></app-payments>
-</main>
+<router-outlet></router-outlet>
