--- a/src/app/main-part/payments/payments-pay/payments-pay-navbar/payments-pay-navbar.component.html
+++ b/src/app/main-part/payments/payments-pay/payments-pay-navbar/payments-pay-navbar.component.html
@@ -1,7 +1,7 @@
 <div class="layout navbar">
     <div routerLinkActive="active" class="navbar__item">
         <div class="active__wrapper">
-            <a routerLink="/payments-pay/by-card" class="link link_blue_yes button-link">
+            <a routerLink="by-card" class="link link_blue_yes button-link">
                 <div class="navbar__item-icon">
                     <img src="../../../../assets/credit-card__blue.png" class="card-blue" height="15" width="20"/>
                     <img src="../../../../assets/credit-card.png" class="card-black" height="15" width="20">
@@ -12,7 +12,7 @@
     </div>
     <div routerLinkActive="active" class="navbar__item">
         <div class="active__wrapper">
-            <a routerLink="/payments-pay/by-internet-bank" class="link link_blue_yes button-link">
+            <a routerLink="by-internet-bank" class="link link_blue_yes button-link">
                 <div class="navbar__item-icon">
                     <img src="../../../../assets/computer__blue.png" class="card-blue comp" height="16" width="24"/>
                     <img src="../../../../assets/computer.png" class="card-black comp" height="16" width="24">
