--- a/src/app/main-part/payments/payments-pay/pay-card/pay-card.component.html
+++ b/src/app/main-part/payments/payments-pay/pay-card/pay-card.component.html
@@ -1,4 +1,3 @@
-<app-payments-pay-navbar></app-payments-pay-navbar>
 <div class="layout">
     <form class="form" (ngSubmit)="onSubmit(f)" #f="ngForm">
         <div class="card__wrapper">
@@ -14,8 +13,8 @@
                            name="card"
                            placeholder="Номер карты"
                            ngModel
-                           pattern="^[0-9]{16}$"
                            maxlength="16"
+                           pattern="^[0-9]{16}$"
                            required>
                 </div>
                 <div class="form__item-wrapper">
@@ -25,15 +24,14 @@
                            placeholder="ММ/ГГ"
                            ngModel
                            pattern="^[0-9]{2}/[0-9]{2}$"
-                           maxlength="16"
                            required>
                     <input class="form__input"
                            type="text" id="cvc"
                            name="cvc"
                            placeholder="CVC"
                            ngModel
-                           pattern="^[0-9]{3}$"
                            maxlength="3"
+                           pattern="^[0-9]{3}$"
                            required>
                 </div>
             </div>
@@ -66,7 +64,7 @@
             <div class="form__item">
                 <label for="email" class="form__label">Ваша эл.почта</label>
                 <input class="form__input form__input-new"
-                       type="type"
+                       type="text"
                        id="email"
                        name="email"
                        placeholder="Для квитанции об оплате"
