--- a/src/app/main-part/main-part.component.html
+++ b/src/app/main-part/main-part.component.html
@@ -1,4 +1,5 @@
 <main class="general-layout">
     <app-header></app-header>
     <app-payments></app-payments>
+    <app-footer></app-footer>
 </main>
