--- a/src/app/main-part/payments/payments-request/payments-request.component.html
+++ b/src/app/main-part/payments/payments-request/payments-request.component.html
@@ -69,6 +69,8 @@
                        id="phone_n"
                        name="phone_n"
                        placeholder="+7"
+                       maxlength="12"
+                       pattern="^[+0-9]{12}|[0-9]{11}$"
                        required
                        ngModel>
             </div>
