--- a/src/app/main-part/header/header.component.html
+++ b/src/app/main-part/header/header.component.html
@@ -8,20 +8,20 @@
             <div class="user-info__item">
                 <div class="user-info__phone">{{ user.userPhone }}</div>
                 <div class="user-info__site">
-                    <a href="#" class="link link_blue_yes">{{ user.userSite }}</a>
+                    <a href="main" class="link link_blue_yes">{{ user.userSite }}</a>
                 </div>
                 <div class="user-info__email">
-                    <a href="#" class="link link_blue_yes">{{ user.userEmail }}</a>
+                    <a href="main" class="link link_blue_yes">{{ user.userEmail }}</a>
                 </div>
             </div>
             <div class="user-info__item">
                 <div class="user-info__company-info">
-                    <a href="#" class="link link_blue_yes">Информация о компании</a>
+                    <a href="main" class="link link_blue_yes">Информация о компании</a>
                 </div>
             </div>
             <div class="user-info__item">
                 <div class="user-info__requisites">
-                    <a href="#" class="link link_blue_yes">Показать реквизиты</a>
+                    <a href="main" class="link link_blue_yes">Показать реквизиты</a>
                 </div>
             </div>
         </div>
