--- a/src/app/main-part/payments/payments-pay/pay-card/pay-card.component.html
+++ b/src/app/main-part/payments/payments-pay/pay-card/pay-card.component.html
@@ -23,6 +23,7 @@
                            name="date"
                            placeholder="ММ/ГГ"
                            ngModel
+                           maxlength="5"
                            pattern="^[0-9]{2}/[0-9]{2}$"
                            required>
                     <input class="form__input"
