--- a/src/app/main-part/footer/footer.component.html
+++ b/src/app/main-part/footer/footer.component.html
@@ -42,4 +42,13 @@
         [ˈreino ðe esˈpaɲa]) — суверенное государство на юго-западе Европы и частично в Африке, член Европейского
         союза и НАТО. Испания занимает бо́ль...
     </div>
+    <div class="logout-button">
+        <div class="logout__button">
+            <button class="button" (click)="authService.logout()">
+                <span class="button__text">Выйти</span>
+            </button>
+            <img src="https://static.tildacdn.com/tild3464-3130-4365-a233-613965613735/BUTTON_1.png"
+                 class="button_img" width="180px" height="60px">
+        </div>
+    </div>
 </div>
