--- a/src/app/admin-part/admin-navbar/admin-navbar.component.css
+++ b/src/app/admin-part/admin-navbar/admin-navbar.component.css
@@ -5,6 +5,7 @@
     flex-flow: row wrap;
     font-size: 20px;
     font-weight: 700;
+    font-family: 'Geometria', sans-serif;
 }
 
 .navbar__item
