--- a/src/app/main-part/footer/footer.component.css
+++ b/src/app/main-part/footer/footer.component.css
@@ -71,6 +71,57 @@
     text-align: justify;
 }
 
+.logout__button {
+    position: relative;
+    width: 130px;
+    height: 40px;
+    border: 1px solid black;
+}
+
+.button_img {
+    position: relative;
+    top: -13px;
+    left: -20px;
+    opacity: .7;
+    z-index: 1;
+}
+
+.button {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    position: absolute;
+    transition: background-color .8s ease-out;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    font-family: 'Geometria';
+    font-weight: 500;
+    font-size: 15px;
+    text-align: center;
+    background: transparent;
+    color: black;
+    border: 1px solid black;
+    cursor: pointer;
+    z-index: 5;
+}
+
+.button:focus {
+    outline: none;
+}
+
+.button:not(:disabled):hover {
+    background-color: white;
+}
+
+.logout-button
+{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    margin-top: 15px;
+}
+
 @media screen and (max-width: 800px)
 {
     .services__info
